Cleaned up Application.java